# micro-deterministic-ecdsa

./: .buildrc  .clang-format  .editorConfig  .editorconfig  .gitignore  .swiftformat  CMakeLists.txt  LICENSE  Package.swift  README.md  build.sh  test.sh
.github/workflows/: codeql.yaml  release.yaml
.swiftpm/: swift-rfc6979.xctestplan
.swiftpm/xcode/xcshareddata/xcschemes/: swift-rfc6979.xcscheme
C/: public.h
C/ecc/: curve.c  secp256k1.c
C/hmac/: scalar.c  scalar.h
Sources/C/ecc/: point.c
Sources/C/hmac/: hash.h  nonce.h
Sources/C/sha3/: sha3.c  sha3.h
Sources/CRFC6979/include/: public.h
Sources/CRFC6979/rfc6979/: recover.c  recover.h  sign.h  verify.c  verify.h
Sources/CRFC6979/rfc6979/ecc/: common.h  core.c  core.h  curve.h  secp256k1.c  secp256k1.h  vli.c
Sources/CRFC6979/rfc6979/hmac/: ecmult.c  ecmult.h  field.c  field.h  hash.h  int128.c  int128.h  modinv.c  modinv.h  scalar.c  scalar.h
Sources/CRFC6979/sha3/: sha3.h
Sources/RFC6979/: RFC6979.swift
Sources/SwiftECC/: ECC.swift
Sources/SwiftRFC6979/: RFC6979.swift
Tests/: ecdsa.test.swift
Tests/RFC6979Tests/: RFC6979Tests.swift
ecdsa/: Package.swift
ecdsa/c/ecdsa/: common.c  common.h  core.c  core.h  curve.c  curve.h  point.h  sign.c  sign.h  vli.c  vli.h
ecdsa/c/hmac/: hash.c  int128.h  nonce.c
ecdsa/c/sha3/: sha3.c  sha3.h
ecdsa/swift/: ecdsa.swift  sha3.swift
include/: public.h
src/ecc/: curve.c
src/hmac/: int128.c
src/include/: public.h
src/keccak256/: keccak256.c  keccak256.h
src/rfc6979/: sign.h  verify.c  verify.h
src/sha3/: sha3.c
swift/: Package.swift
swift/Sources/MicroDeterministicECDSA/: MicroDeterministicECDSA.swift  RFC6979.swift
swift/Tests/MicroDeterministicECDSATests/: MicroDeterministicECDSATests.swift  RFC6979Tests.swift
test/: test_keccak256.c  test_sha3.c
(+1 files in other folders)
